# srt_demo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  transmit-lib.cpp
app/src/main/cpp/include/openssl/: opensslconf.h
app/src/main/java/com/example/srttest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
